infra/aws/vpc/vpc.tf
resource "aws_vpc" "cnrp_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true

  tags = {
    Name = "cnrp-vpc"
  }
}
